--- a/adm_jadwal_front/package.json
+++ b/adm_jadwal_front/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "chart.js": "^2.7.3",
+    "jwt-decode": "^2.2.0",
     "react": "^16.6.3",
     "react-bootstrap": "^0.32.4",
     "react-chartjs-2": "^2.7.4",
