--- a/adm_jadwal_server/package.json
+++ b/adm_jadwal_server/package.json
@@ -6,22 +6,24 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "bcrypt": "^3.0.2",
-    "body-parser": "^1.18.3",
+    "bcrypt": "^3.0.6",
+    "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.3",
-    "cors": "^2.8.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
-    "express": "~4.16.0",
+    "express": "^4.16.4",
     "gridfs-stream": "^1.1.1",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
-    "jsonwebtoken": "^8.4.0",
+    "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
-    "mongoose": "^5.3.2",
+    "mongoose": "^5.7.5",
     "morgan": "~1.9.0",
-    "multer": "^1.4.1",
-    "multer-gridfs-storage": "^3.2.3",
-    "mysql": "^2.16.0",
-    "nodemon": "^1.18.4"
+    "multer": "^1.4.2",
+    "multer-gridfs-storage": "^3.3.0",
+    "mysql": "^2.17.1"
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.4"
   }
 }
